small spacing fixes in css, also added @ucsd.edu to list of emails

--- a/app/index.css
+++ b/app/index.css
@@ -427,7 +427,7 @@ body {
     background-color: rgba(0, 0, 0, 0);
 }
 
-.loading-container .long-space {
+.long-space {
   height: 100vh;
 }
 
